--- a/templates/en/payment_methods/payment_methods1.html
+++ b/templates/en/payment_methods/payment_methods1.html
@@ -11,7 +11,7 @@
         <ul>
             <li>
                 <label for=""> Timespan </label>
-                <input type="radio" id="3-months" name="timespan" value="1" required>In the middle of the Frist 3 months(at the 15th) <br> <br>
+                <input type="radio" id="3-months" name="timespan" value="1" required>In the middle of the first 3 months(at the 15th) <br> <br>
                 <input type="radio" id="3-months-before" name="timespan" value="2">3 Months prepaid:(1.1, 1.4, 1.7, 1.10) <br> <br>
                 <input type="radio" id="6-months-before" name="timespan" value="3">6 Months prepaid:(1.1, 1.7) <br> <br>
                 <input type="radio" id="12-months-before" name="timespan" value="4">12 Months prepaid(1.1) <br> 
