--- a/templates/bg/payment_methods/payment_methods1.html
+++ b/templates/bg/payment_methods/payment_methods1.html
@@ -1,24 +1,25 @@
-{% extends 'en/en_base.html' %}
+{% extends 'bg/bg_base.html' %}
 
 {% block head %}
-<title>GEZ</title>
+<title>Адресна регистрация</title>
 {% endblock %}
 {% block body %}
 
 <div class="pers-fields">
     <form action="/{{language}}/gez/payment_methods" method="POST">
-        <h1>Types of payment 1 of 2</h1>
+        <h1>Методи на плащане 1 от 2</h1>
         <ul>
             <li>
-                <label for=""> Timespan </label>
-                <input type="radio" id="3-months" name="timespan" value="1" required>In the middle of the Frist 3 months(at the 15th) <br> <br>
-                <input type="radio" id="3-months-before" name="timespan" value="2">3 Months prepaid:(1.1, 1.4, 1.7, 1.10) <br> <br>
-                <input type="radio" id="6-months-before" name="timespan" value="3">6 Months prepaid:(1.1, 1.7) <br> <br>
-                <input type="radio" id="12-months-before" name="timespan" value="4">12 Months prepaid(1.1) <br> 
+                <label for=""> Период от време
+                </label>
+                <input type="radio" id="3-months" name="timespan" value="1" required>В средата на първите 3 месеца(at the 15th) <br> <br>
+                <input type="radio" id="3-months-before" name="timespan" value="2">3 месеца предплащане: (1.1, 1.4, 1.7, 1.10) <br> <br>
+                <input type="radio" id="6-months-before" name="timespan" value="3">6 месеца предплащане:(1.1, 1.7) <br> <br>
+                <input type="radio" id="12-months-before" name="timespan" value="4">12 месеца предплащане:(1.1) <br> 
                 <span><details>
                     <summary>
-                        Help?
-                    </summary> Please choose the timespan in which you want to pay the fee.
+                        Помощ?
+                    </summary> Моля, изберете периода, в който искате да платите таксата.
                 </details>
                     
                 </span>
