--- a/templates/bg/sepa/sepa3.html
+++ b/templates/bg/sepa/sepa3.html
@@ -1,29 +1,29 @@
-{% extends 'en/en_base.html' %}
+{% extends 'bg/bg_base.html' %}
 
 {% block head %}
-<title>GEZ</title>
+<title>Адресна регистрация</title>
 {% endblock %}
 {% block body %}
 
 <form action="/{{language}}/gez/sepa" method="POST">
-    <h1>SEPA direct debit mandate 3 of 4</h1>
+    <h1>Мандат за директен дебит на SEPA 3 от 4</h1>
     <ul>
         <li>
-            <label for="ZIP_code">ZIP:</label>
+            <label for="ZIP_code">ZIP код:</label>
             <input type="number" id="ZIP_code" name="ZIP_code" required>
             <span><details>
                 <summary>
-                    Help?
-                </summary>Enter the ZIP-code of your adress here please. It should be the same just as the address you wrote down earlier.
+                    Помощ?
+                </summary>Въведете тук пощенския код на адреса Ви, моля. То трябва да бъде същото като адреса, който сте записали по-рано.
             </details> </span>
         </li>
         <li>
-            <label for="area">City:</label>
+            <label for="area">Град:</label>
             <input type="text" id="area" name="area" required>
             <span><details>
                 <summary>
-                    Help?
-                </summary>Enter the City of your home here please. It should be the same just as the address you wrote down earlier.
+                    Помощ?
+                </summary>Моля, въведете тук града, в който живеете. То трябва да бъде същото като адреса, който сте записали по-рано.
                 </details> </span>
         </li>
         <li>
