--- a/templates/en/register.html
+++ b/templates/en/register.html
@@ -19,7 +19,7 @@
             <input type="password" name="" id="" required>
             <span>Choose your password</span>
             <br>
-            <input type="password" name="" id="" required>
+            <input type="password" name="" id="" minlength="6" required>
             <span>Repeat your password please</span>
         </li>
         <li>
