formulare auf deutsch uebersetzt

--- a/templates/de/de_base.html
+++ b/templates/de/de_base.html
@@ -29,7 +29,7 @@
     <nav class="Navbar">
         <div class="topnav" id="myTopnav">
             <a href="/de/home" class="active">Home</a>
-            <a href="">Documente</a>
+            <a href="">Dokumente</a>
             <div class="dropdown">
                 <button class="dropbtn">Sprache
                     <i class="fa fa-caret-down"></i>
