--- a/templates/de/about_us.html
+++ b/templates/de/about_us.html
@@ -1,53 +1,80 @@
 <!DOCTYPE html>
-<html lang = "de">
+<html lang="de">
 
 
 <head>
     <link rel=stylesheet href="css/about us css.css">
     <title>Über uns</title>
 </head>
+
 <body>
     <h1>
-       Willkommen zu unserer Website!
+        Willkommen zu unserer Website!
     </h1>
     <p class="text">
-        Unser Team A-5 ist hier um Ihnen bei der Ausfüllung der verschiedensten Dokumente die Sie für ein ruhiges Leben in Deutschland benötigen! Wir arbeiten an der Übersetzung jeglicher Informationen die Sie brauchen
-        und führen euch mit einfachen Erklärungen und Tutorials durch die langwierigen Dokumenten. 
+        Unser Team A-5 ist hier um Ihnen bei der Ausfüllung der verschiedensten Dokumente die Sie für ein ruhiges Leben
+        in Deutschland benötigen!
+        Diese Webseite dient nur dazu Ihnen dabei zu Helfen Sie Schritt für Schritt durch ein spezielles Dokument zu
+        führen.
     </p>
     <p class="text">
-        Unser Team besteht aus 6 Studenten im dritten Semester ihres Studiums aus der Hochschule Mannheim. Wir nutzen für die Seite die neueste Technologie die wir auch selbst im Studium erlernten. Für dieses Projekt
-        arbeiten wir in Kooperation mit unseren Proffessoren und der <b id="welfare"> Fakultät für Sozialwesen</b> unserer Hochschule. 
+        Unser Team besteht aus 6 Studenten der Hochschule Mannheim.
+        Wir erstellen diese Webseite in Kooperation mit der Fakultät für Sozialwesen der Hochschule Mannheim.
+        In diesem Fall speziell mit Andreas Lindemann.
     </p>
     <p>
 
     </p>
     <h2>
-        Unsere Teammitglieder sind: 
+        Unsere Teammitglieder sind:
     </h2>
-    <p class = "boxed">
-        <img src="images\Profil 1.png" class ="image"> <br>Das ist Georgy Haydukov, der für die Cookies und unserer Datenschutz-Seite zuständig ist. 
-                                                        Erreichbar ist er über seine Mail: <a href= "11@stud.hs-mannheim.de">11@stud.hs-mannheim.de</a>
-    </p>
-    <p class= "boxed">
-        <img src="images\Profil 2.png" class ="image"> <br>Hier ist Aleksandar Histrov, unser Flask Spezialist und bulgarischer Übersetzer. Erreichbar ist er über seine Mail: <a href= "12@stud.hs-mannheim.de">12@stud.hs-mannheim.de</a>
+    <p class="boxed">
+        <img src="images\Profil 1.png" class="image"> <br>
+        Das ist Georgy Haydukov, der für die Cookies und unserer Datenschutz-Seite zuständig ist.
+        Erreichbar ist er über seine Mail:
+        <a href="georgi.haydukov@stud.hs-mannheim.de">georgi.haydukov@stud.hs-mannheim.de</a>
     </p>
     <p class="boxed">
-        <img src="images\Profil 3.png" class ="image"> <br>Das ist Robert Endler.Er arbeitet an unserem Impressum, als auch an unserer französischen Übersetzung.Erreichbar ist er über seine Mail: <a href= "13@stud.hs-mannheim.de">13@stud.hs-mannheim.de</a>
+        <img src="images\Profil 2.png" class="image"> <br>
+        Hier ist Aleksandar Histrov, unser Flask Spezialist und
+        bulgarischer Übersetzer.
+        Erreichbar ist er über seine Mail:
+        <a href="aleksandar.histrov@stud.hs-mannheim.de">aleksandar.histrov@stud.hs-mannheim.de</a>
+    </p>
+    <p class="boxed">
+        <img src="images\Profil 3.png" class="image"> <br>
+        Das ist Robert Endler.
+        Er arbeitet an unserem Impressum, als auch an unserer französischen Übersetzung.
+        Erreichbar ist er über seine Mail:
+        <a href="robert.endler@stud.hs-mannheim.de">robert.endler@stud.hs-mannheim.de</a>
     </p>
     <br>
     <p class="boxed">
-        <img src="images\Profil 4.png" class ="image"> <br>Ilyas Bal arbeitet an der Implementierung unseren Tutorials für Ihre zukünftigen zu ausfüllenden Dokumenten. Erreichbar ist er über seine Mail: <a href= "14@stud.hs-mannheim.de">14@stud.hs-mannheim.de</a>
+        <img src="images\Profil 4.png" class="image"> <br>
+        Ilyas Bal arbeitet an der Implementierung unserer Tutorials für Ihre zukünftigen zu ausfüllenden Dokumenten.
+        Erreichbar ist er über seine Mail:
+        <a href="ilyas.bal@stud.hs-mannheim.de">ilyas.bal@stud.hs-mannheim.de</a>
     </p>
     <p class="boxed">
-        <img src="images\profil 5.png" class ="image"> <br>Lennart Gulde ist ebenfalls an unseren Tutorials tätig. Desweiterem arbeitet er an unserem Loginsystem. Erreichbar ist er über seine Mail: <a href= "15@stud.hs-mannheim.de">15@stud.hs-mannheim.de</a>
+        <img src="images\profil 5.png" class="image"> <br>
+        Lennart Gulde ist ebenfalls an unseren Tutorials tätig.
+        Desweiterem arbeitet er an unserem Loginsystem.
+        Erreichbar ist er über seine Mail:
+        <a href="lennart.gulde@stud.hs-mannheim.de">lennart.gulde@stud.hs-mannheim.de</a>
     </p>
     <p class="boxed">
-        <img src="images\profil 6.png" class ="image" > <br>Hier haben wir Muhammed Yavuz, welcher die Über uns Seite schreibt die sie gerade lesen!Außerdem hilft er bei dem Login aus. Erreichbar ist er über seine Mail: <a href= "16@stud.hs-mannheim.de">16@stud.hs-mannheim.de</a>
+        <img src="images\profil 6.png" class="image"> <br>
+        Hier haben wir Muhammed Yavuz, welcher die Über uns Seite
+        schreibt die sie gerade lesen!Außerdem hilft er bei dem Login aus.
+        Erreichbar ist er über seine Mail:
+        <a href="16@stud.hs-mannheim.de">16@stud.hs-mannheim.de</a>
     </p>
 
     <p id="finalsentence">
-        <br>Jedes Teammitglied des Teams A-5 hofft das diese Seite dir bei all deinen Fragen und Schwierigkeiten aushelfen kann, damit du sicher und einfach durch die deutsche Bürokratie anvigieren kannst. Wir alle 
+        <br>Jedes Teammitglied des Teams A-5 hofft das diese Seite dir bei all deinen Fragen und Schwierigkeiten
+        aushelfen kann, damit du sicher und einfach durch die deutsche Bürokratie anvigieren kannst. Wir alle
         wünschen dir eine schöne Zeit in Deutschland!
     </p>
 </body>
+
 </html>
