--- a/templates/en/about_us.html
+++ b/templates/en/about_us.html
@@ -12,10 +12,10 @@
 <p class="text">
     Our Team A-5 is here to provide you with the best possible help you can get to fill out all the documents you have
     to finish for a save and easy life in germany!
-    So the only purpose of this website is to help you through evry step of the specific document you need help.
+    So the only purpose of this website is to help you through every step of the specific document you need help.
 </p>
 <p class="text">
-    Our team is composed of 6 students from the Hochschule Mannheim in Germany. 
+    Our team is composed of 6 students from the Hochschule Mannheim in Germany.
     We create this website in cooperation with the welfare faculty of the Hochschule Mannheim.
     Espacially with Andreas Lindemann.
 </p>
@@ -29,7 +29,7 @@
     <img src="/images/Profil 1.png" class="image"> <br>
     First member is Georgi Haydukov, a who is responsible for
     the cookies and our privacy policies, bulgarian translation and some JavaScript. <br>
-    You can reach him under his email: 
+    You can reach him under his email:
     <a href="georgi.haydukov@stud.hs-mannheim.de">georgi.haydukov@stud.hs-mannheim.de</a>
 </p>
 <br>
@@ -38,8 +38,8 @@
 <p class="boxed">
     <img src="/images/Profil 2.png" class="image"> <br>
     Furthermore we have Aleksandar Histrov, our Flask specialist and
-    bulgarian translator. 
-    You can reach him under his email: 
+    bulgarian translator.
+    You can reach him under his email:
     <a href="aleksandar.histrov@stud.hs-mannheim.de">aleksandar.histrov@stud.hs-mannheim.de</a>
 </p>
 <br>
@@ -48,33 +48,37 @@
 <p class="boxed">
     <img src="/images/Profil 3.png" class="image"> <br>
     This is Robert Endler who works not only on our imprint, but also
-    on our french translation. 
-    You can reach him under his email: 
+    on our french translation.
+    You can reach him under his email:
     <a href="robert.endler@stud.hs-mannheim.de">robert.endler@stud.hs-mannheim.de</a>
 </p>
 <br>
 <br>
 <br>
 <p class="boxed">
-    <img src="/images/Profil 4.png" class="image"> <br>Here is Ilyas Bal who is working on our tutorials and
-    explanations for your future documents. 
-    You can reach him under his email: 
+    <img src="/images/Profil 4.png" class="image"> <br>
+    Here is Ilyas Bal who is working on our tutorials andexplanations for your future documents.
+    You can reach him under his email:
     <a href="ilyas.bal@stud.hs-mannheim.de">ilyas.bal@stud.hs-mannheim.de</a>
 </p>
 <br>
 <br>
 <br>
 <p class="boxed">
-    <img src="/images/profil 5.png" class="image"> <br>Lennart Gulde is also working on our tutorials and helping out on
-    our loginsystem. You can reach him under his email: <a href="lennart.gulde@stud.hs-mannheim.de">lennart.gulde@stud.hs-mannheim.de</a>
+    <img src="/images/profil 5.png" class="image"> <br>
+    Lennart Gulde is also working on our tutorials and helping out on our loginsystem.
+    You can reach him under his email:
+    <a href="lennart.gulde@stud.hs-mannheim.de">lennart.gulde@stud.hs-mannheim.de</a>
 </p>
 <br>
 <br>
 <br>
 <p class="boxed">
-    <img src="/images/profil 6.png" class="image"> <br>Finally here is Muhammed Yavuz, who is responsible for the
-    information you are reading right now! Moreover he works on the login, just as on the menu. You can reach him under
-    his email: <a href="muhammed.yavuz@stud.hs-mannheim.de">muhammed.yavuz@stud.hs-mannheim.de</a>
+    <img src="/images/profil 6.png" class="image"> <br>
+    Finally here is Muhammed Yavuz, who is responsible for the information you are reading right now! Moreover he works
+    on the login, just as on the menu.
+    You can reach him under his email:
+    <a href="muhammed.yavuz@stud.hs-mannheim.de">muhammed.yavuz@stud.hs-mannheim.de</a>
 </p>
 
 <p id="finalsentence">
