submit buttons veraendert

--- a/templates/de/payment_methods/payment_methods2.html
+++ b/templates/de/payment_methods/payment_methods2.html
@@ -24,7 +24,7 @@
             </li>
             <li>
                 <input type="button" value="Back" onClick="javascript:history.back()">
-                <input type="submit" value="Submit"><br>
+                <input type="submit" value="Senden"><br>
             </li>
         </ul>
     </form>
