--- a/templates/de/register.html
+++ b/templates/de/register.html
@@ -59,7 +59,7 @@
             <span>Bitte wählen Sie ihre bevorzugte Sprache.</span>
         </li>
         <li>
-            <input type="submit" value="Submit">
+            <input type="submit" value="Senden">
         </li>
     </ul>
 </form>
