--- a/templates/de/adress/adress2.html
+++ b/templates/de/adress/adress2.html
@@ -35,7 +35,7 @@
             </li>
             <li>
                 <input type="button" value="Back" onClick="javascript:history.back()">
-                <input type="submit" value='submit'>
+                <input type="submit" value='Senden'>
             </li>
         </ul>
     </form>
