--- a/templates/de/adress/adress4.html
+++ b/templates/de/adress/adress4.html
@@ -30,7 +30,7 @@
             </li>
             <li>
                 <input type="button" value="Back" onClick="javascript:history.back()">
-                <input type="submit" value='submit'>
+                <input type="submit" value='Senden'>
             </li>
         </ul>
     </form>
