--- a/templates/de/adress/adress5.html
+++ b/templates/de/adress/adress5.html
@@ -21,7 +21,7 @@
             </li>
             <li>
                 <input type="button" value="Back" onClick="javascript:history.back()">
-                <input type="submit" value='submit'>
+                <input type="submit" value='Senden'>
             </li>
         </ul>
     </form>
