--- a/templates/de/general_information/general_information2.html
+++ b/templates/de/general_information/general_information2.html
@@ -33,7 +33,7 @@
         </li>
         <li>
             <input type="button" value="Back" onClick="javascript:history.back()">
-            <input type="submit" value="Submit">
+            <input type="submit" value="Senden">
         </li>
     </ul>
 </form>
