--- a/templates/de/general_information/general_information3.html
+++ b/templates/de/general_information/general_information3.html
@@ -21,7 +21,7 @@
         </li>
         <li>
             <input type="button" value="Back" onClick="javascript:history.back()">
-            <input type="submit" value="Submit">
+            <input type="submit" value="Senden">
         </li>
     </ul>
 </form>
