--- a/templates/de/sepa/sepa1.html
+++ b/templates/de/sepa/sepa1.html
@@ -22,7 +22,7 @@
         </li>
         <li>
             <input type="button" value="Back" onClick="javascript:history.back()">
-            <input type="submit" value="Submit">
+            <input type="submit" value="Senden">
         </li>
     </ul>
 </form>
