--- a/templates/de/sepa/sepa2.html
+++ b/templates/de/sepa/sepa2.html
@@ -34,7 +34,7 @@
         </li>
         <li>
             <input type="button" value="Back" onClick="javascript:history.back()">
-            <input type="submit" value="Submit">
+            <input type="submit" value="Senden">
         </li>
     </ul>
 </form>
