Changed Bulgarian pages to bg base

--- a/templates/en/welcome.html
+++ b/templates/en/welcome.html
@@ -70,7 +70,7 @@
         <i>You can decide here on what we should help you!</i>
     </summary> 
         <p><a href=" "> Appartement registration</a> 
-            <br> <a href="/Web_A-5_Project_Repo/templates/en/home.html"> GEZ</a> 
+            <br> <a href="/home"> GEZ</a> 
             <br> <a href=" ">Child care</a>
         </p>
     </details></span>
@@ -85,7 +85,7 @@
     <p>
         We use cookies in this website to give you the best experience possible
         and show you relevant ads. To find out more, read our
-        <a href="templates/localized_pages/English/privacy_policy.html">privacy policy</a>.
+        <a href="/en/privacy_policy">privacy policy</a>.
     </p>
 
     <button class="cookie-btn">
