--- a/templates/en/en_base.html
+++ b/templates/en/en_base.html
@@ -27,10 +27,11 @@
 
     <nav class="Navbar">
         <div class="firstnavbar" id="myFirstnav">
-            <a href="/en/home"> <img src="static/images/us.png"> </a>
-            <a href="/de/home"><img src="static/images/de.png"> </a>
-            <a href="/bg/home"><img src="static/images/bg.png"> </a>
-            <a href="/fr/home"><img src="static/images/fr.png"> </a>
+            <a href="?lang=en"> <img src="{{url_for('static', filename='images/us.png')}}"> </a>
+            <a href="?lang=de"> <img src="{{url_for('static', filename='images/de.png')}}"> </a>
+            <a href="?lang=bg"> <img src="{{url_for('static', filename='images/bg.png')}}"> </a>
+            <a href="?lang=fr"> <img src="{{url_for('static', filename='images/fr.png')}}"> </a>
+
         </div>
     </nav>
 
