--- a/templates/en/register.html
+++ b/templates/en/register.html
@@ -6,7 +6,7 @@
 <title>GEZ</title>
 {% endblock %}
 {% block body %}
-<form action="/register" method="POST">
+<form action="/{{language}}/register" method="POST">
     <h1>Register</h1>
     <ul>
         <li>
