--- a/templates/bg/about_us.html
+++ b/templates/bg/about_us.html
@@ -1,7 +1,7 @@
 {% extends 'bg/bg_base.html' %}
 
 {% block head %}
-<title>About us</title>
+<title>За нас</title>
 {% endblock %}
 
 {% block body %}
