--- a/templates/bg/adress/adress2.html
+++ b/templates/bg/adress/adress2.html
@@ -1,7 +1,7 @@
 {% extends 'bg/bg_base.html' %}
 
 {% block head %}
-<title>GEZ</title>
+<title>Адресна регистрация</title>
 {% endblock %}
 {% block body %}
 <div class="pers-fields">
