--- a/templates/bg/general_information/general_information3.html
+++ b/templates/bg/general_information/general_information3.html
@@ -8,7 +8,7 @@
     <h1>Обща информация 3 от 3</h1>
     <ul>
         <li>
-            <label for="dateOfBirth">Date of Birth</label>
+            <label for="dateOfBirth">Дата на раждане</label>
             <input type="date" name="dateOfBirth" id="dob" required>
             <span><details><summary>
                 Помощ?
