--- a/templates/bg/gez_explanation.html
+++ b/templates/bg/gez_explanation.html
@@ -4,21 +4,21 @@
 <html lang="{{language}}">
 {% endblock %}
 {% block head %} 
-<title>GEZ</title> 
+<title>Адресна регистрация</title> 
 {% endblock %}
 {% block body %}
-<h1>Welcome to our GEZ-help!</h1>
-<h2>You requested some help for a gez-document.</h2>
-<p>GEZ is the broadcast fee here in germany. Every apartment has to pay it, so there is no escape from it, if you want to live in germany.</p>
-<p>While it can be annoying to pay, you only have to fill out the document once, as long as you live in your current apartment.</p>
-<h3>We devide the document into multiple little parts.</h3>
+<h1>Добре дошли в нашия GEZ-help!</h1>
+<h2>Поискахте помощ за gez-документ.</h2>
+<p>GEZ е таксата за излъчване тук, в Германия. Всеки апартамент трябва да го плати, така че няма как да избягате от него, ако искате да живеете в Германия.</p>
+<p>Въпреки че може да е досадно да плащате, трябва да попълните документа само веднъж, стига да живеете в настоящия си апартамент.</p>
+<h3>Разделяме документа на множество малки части.</h3>
 <ul>
-    <li>First of all we need your general informations, such as your name or your birth date</li>
-    <li>Secondly we need informations about your adress</li>
-    <li>Afterwards we need to know your prefered payment method.</li>
-    <li>If you like to use SEPA we need your banking information. Otherwise you have to send the money on your own.</li>
-    <li>Finally, if you are done, you just have to sign the document and you are done!</li>
+    <li>На първо място се нуждаем от вашата обща информация, като вашето име или рождената ви дата</li>
+    <li>На второ място се нуждаем от информация за Вашия адрес</li>
+    <li>След това трябва да знаем предпочитания от вас начин на плащане.</li>
+    <li>Ако искате да използвате SEPA, ние се нуждаем от вашата банкова информация. В противен случай трябва да изпратите парите сами.</li>
+    <li>И накрая, ако сте готови, просто трябва да подпишете документа и сте готови!</li>
 </ul>
-<h3> If you like to start now, just press the start button.</h3>
+<h3> Ако искате да започнете сега, просто натиснете бутона за стартиране.</h3>
 <input type="submit" value="START" onclick="">
 {% endblock %}
