--- a/templates/bg/legalNotice.html
+++ b/templates/bg/legalNotice.html
@@ -1,7 +1,7 @@
 {% extends 'bg/bg_base.html' %}
 
 {% block head %}
-<title>Legal Notice</title>
+<title>Правно известие</title>
 {% endblock %}
 {% block body %}
 <header>
@@ -44,7 +44,7 @@
 <p>Равенството на всички лица пред закона и защитата от дискриминация е универсално човешко право. Всеки човек
     съществото има основно право на държавни действия в съответствие със закона, т.е. дае е безпристрастен.
 </p>
-<p>Уебсайтът на Stadt Mannheim се ангажира с този принцип, целите на Европейската общност да защитава
+<p>Уебсайтът на град Mannheim се ангажира с този принцип, целите на Европейската общност да защитава
     срещу дискриминацията и нейното законово прилагане в Закона за общото равно третиране (AGG).</p>
 <p>В това отношение Община Манхайм се стреми да предотврати или премахне дискриминацията въз основа на раса или
     етнически произход, пол, религия или убеждения, увреждане, възраст или сексуална идентичност.
