--- a/templates/en/final.html
+++ b/templates/en/final.html
@@ -14,7 +14,7 @@
     </details>
     <br> </h2>
     
-<p>If you need any kind of additional help, please do not hestitate to reach out the helpline <a href="https://www.mannheim.de/de/service-bieten/integration-migration/anima-ankommen-in-mannheim"></a>ANIMA </a></p>
+<p>If you need any kind of additional help, please do not hesitate to reach out the helpline <a href="https://www.mannheim.de/de/service-bieten/integration-migration/anima-ankommen-in-mannheim"></a>ANIMA </a></p>
 <p>
     If you would like to fill out any other document, please click <a href="/en/gez/home">here</a>.
 </p>
