--- a/templates/bg/adress/adress4.html
+++ b/templates/bg/adress/adress4.html
@@ -8,7 +8,7 @@
     <form action="/{{language}}/gez/adress" method="POST">
         <h1> Адрес 4 от 5</h1>
         <ul> <li>
-            <label for="zip_code">ZIP код:</label>
+            <label for="zip_code">Пощенски код:</label>
             <input type="number" id="zip_code" name="zip_code" required>
             <span class="extra-info"><details><summary>Помощ?
 
@@ -23,7 +23,7 @@
             <span class="extra-info"><details><summary>Помощ?
 
             </summary>
-            Моля, въведете името на града, в който живеете. Например: Johntown, Getinsburg.
+            Моля, въведете името на града, в който живеете. Например: София, Пазарджик.
         </details>
                
             </span>
