--- a/templates/bg/final.html
+++ b/templates/bg/final.html
@@ -3,20 +3,20 @@
 
 {% block head %}
 <!-- <title> ... </title>-->
-<title> Welcome </title>
+<title> Добре дошли! </title>
 {% endblock %}
 {% block body %}
-<h1>Welcome </h1>
+<h1>Добре дошли! </h1>
 <hr>
-<h2> Please remember that we still need your signature and the date as validation! This is where you have to sign in! <details>
-    <summary>This is how it looks like!</summary>
+<h2> Моля, не забравяйте, че все още се нуждаем от Вашия подпис и датата като потвърждение! Тук трябва да влезете! <details>
+    <summary>Изглежда по този начин!</summary>
     <img src="/images/Part_3.png" class="image">
     </details>
     <br> </h2>
     
-<p>If you need any kind of additional help, please do not hestitate to reach out the helpline <a href="https://www.mannheim.de/de/service-bieten/integration-migration/anima-ankommen-in-mannheim"></a>ANIMA </a></p>
+<p>Ако се нуждаете от някаква допълнителна помощ, моля, не се колебайте да се свържете с линията за помощ. <a href="https://www.mannheim.de/de/service-bieten/integration-migration/anima-ankommen-in-mannheim"></a>ANIMA </a></p>
 <p>
-    If you would like to fill out any other document, please click <a href="/en/gez/home">here</a>.
+    Ако искате да попълните някой друг документ, моля кликнете <a href="/en/gez/home">тук</a>.
 </p>
 
 {% endblock %}
