--- a/templates/bg/register.html
+++ b/templates/bg/register.html
@@ -2,60 +2,60 @@
 
 {% block head %}
 <!-- <title> ... </title>-->
-<title>GEZ</title>
+<title>Адресна регистрация</title>
 {% endblock %}
 {% block body %}
 <form action="/register" method="POST">
-    <h1>Register</h1>
+    <h1>Регистрация</h1>
     <ul>
         <li>
-            <label for="uNameReg">Username</label>
+            <label for="uNameReg">Потребителско име</label>
             <input type="text" name="userNameReg" id="uNameReg" required>
-            <span>Choose your username</span>
+            <span>Изберете потребителско име</span>
         </li>
         <li>
-            <label for="">Password</label>
+            <label for="">Парола</label>
             <input type="password" name="" id="" required>
-            <span>Choose your password</span>
+            <span>Изберете Вашата парола</span>
             <br>
             <input type="password" name="" id="" required>
-            <span>Repeat your password please</span>
+            <span>Повторете Вашата парола, моля</span>
         </li>
         <li>
             <label for="mail">E-Mail</label>
             <input type="email" name="email" id="mail" required>
-            <span>Enter your E-Mail adress here please</span>
+            <span>Въведете своя имейл адрес тук, моля</span>
         </li>
 
-        <h2>This part is optional</h2>
+        <h2>Тази част е опционална</h2>
         <li>
-            <label for="">Gender</label>
-            <input type="radio" name="gender" id="radioMale"> Male
-            <input type="radio" name="gender" id="radioFemale"> Female
-            <span>Enter your gender here please</span>
+            <label for="">Пол</label>
+            <input type="radio" name="gender" id="radioMale"> Мъж
+            <input type="radio" name="gender" id="radioFemale"> Жена
+            <span>Напишете Вашия пол тук</span>
         </li>
         <li>
-            <label for="fName">First Name</label>
+            <label for="fName">Първо име</label>
             <input type="text" name="firstName" id="fName">
-            <span>Enter your first name here please</span>
+            <span>Напишете Вашето първо име тук</span>
         </li>
         <li>
-            <label for="lastName">Last Name</label>
+            <label for="lastName">Фамилия</label>
             <input type="text" name="lastName" id="lName">
-            <span>Enter your last name here please</span>
+            <span>Напишете Вашата фамилия име тук</span>
         </li>
         <li>
-            <label for="dateOfBirth">Date of Birth</label>
+            <label for="dateOfBirth">Дата на раждане</label>
             <input type="date" name="dateOfBirth" id="dob">
-            <span>Enter your date of birth here please</span>
+            <span>Напишете Вашата рожденна дата тук</span>
         </li>
         <li>
-            <label for="">Language</label>
+            <label for="">Езици</label>
             <input type="radio" name="language" id="en" value="en"> English
             <input type="radio" name="language" id="de" value="de"> German
-            <input type="radio" name="language" id="bg" value="bg"> Bulgarian
+            <input type="radio" name="language" id="bg" value="bg"> Български
             <input type="radio" name="language" id="fr" value="fr"> French
-            <span>Choose the language you'd like to use</span>
+            <span>Изберете езика, който искате да използвате</span>
         </li>
         <li>
             <input type="submit" value="Submit">
