--- a/templates/bg/sepa/sepa3.html
+++ b/templates/bg/sepa/sepa3.html
@@ -9,7 +9,7 @@
     <h1>Мандат за директен дебит на SEPA 3 от 4</h1>
     <ul>
         <li>
-            <label for="ZIP_code">ZIP код:</label>
+            <label for="ZIP_code">Пощенски код:</label>
             <input type="number" id="ZIP_code" name="ZIP_code" required>
             <span><details>
                 <summary>
